--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,10 @@ dist: trusty
 language: rust
 rust:
   - stable
-cache: cargo
+
+cache:
+  directories:
+    - /home/travis/.cargo
+
+before_cache:
+  - rm -rf /home/travis/.cargo/registry
